# quickfix

./: CMakeLists.txt  configure.ac  quickfix_vs15.sln
.github/workflows/: build_test_sln.yml
cmake/: FindSharedPtrArraySupport.cmake  QuickfixPrebuildSetup.cmake
conan/: CMakeLists.txt  conanfile.py
examples/executor/C++/: CMakeLists.txt
examples/ordermatch/: CMakeLists.txt
examples/ordermatch/test/: CMakeLists.txt  Makefile.am
examples/tradeclient/: CMakeLists.txt
src/: CMakeLists.txt  pt.cpp  test_unit_vs15.vcxproj  ut.cpp
src/C++/: CMakeLists.txt  FieldMap.cpp  FieldMap.h  FileStore.cpp  FileStore.h  HttpConnection.cpp  HttpConnection.h  HttpServer.cpp  HttpServer.h  Makefile.am  Message.cpp  Message.h  MessageSorters.cpp  MessageSorters.h  Responder.h  Session.cpp  Session.h  SharedArray.h  SharedArrayAdapter.h  SharedArrayImpl.h  SocketAcceptor.cpp  SocketAcceptor.h  SocketConnection.cpp  SocketConnection.h  SocketConnector.cpp  SocketConnector.h  SocketInitiator.cpp  SocketInitiator.h  SocketMonitor.cpp  SocketMonitor.h  SocketServer.cpp  SocketServer.h  ThreadedSocketAcceptor.cpp  ThreadedSocketAcceptor.h  ThreadedSocketConnection.cpp  ThreadedSocketConnection.h  ThreadedSocketInitiator.cpp  ThreadedSocketInitiator.h  Utility.cpp  Utility.h  (+5 more)
src/C++/test/: FieldConvertorsTestCase.cpp  FieldMapTestCase.cpp  FileStoreTestCase.cpp  Makefile.am  SharedArrayAdapterTestCase.cpp  SharedArrayTestCase.cpp  SocketServerTestCase.cpp
test/atrun/: CMakeLists.txt
